Improve devicetree display settings
- Add CONFIG_"BOARD"_LVDS1_PIX_FMT to "BOARD".qdl file. Needed redefine
for some cases.
- set correct lcd color settings on picomoda9, LCD_PIX_FMT must be
"RGB666" not "BGR666"

--- a/arch/arm/boot/dts/armstonea9qdl.dtsi
+++ b/arch/arm/boot/dts/armstonea9qdl.dtsi
@@ -34,10 +34,12 @@
 #ifdef __MOVE_LVDS0_TO_LVDS1_DUAL_MODE__
 #undef CONFIG_ARMSTONEA9_LVDS1_MAPPING
 #undef CONFIG_ARMSTONEA9_LVDS1_BPP
+#undef CONFIG_ARMSTONEA9_LVDS1_PIX_FMT
 #undef CONFIG_ARMSTONEA9_LVDS1_DATA_WIDTH
 #undef CONFIG_ARMSTONEA9_LVDS1_TIMING
 #define CONFIG_ARMSTONEA9_LVDS1_MAPPING		CONFIG_ARMSTONEA9_LVDS0_MAPPING
 #define CONFIG_ARMSTONEA9_LVDS1_BPP		CONFIG_ARMSTONEA9_LVDS0_BPP
+#define CONFIG_ARMSTONEA9_LVDS1_PIX_FMT		CONFIG_ARMSTONEA9_LVDS0_PIX_FMT
 #define CONFIG_ARMSTONEA9_LVDS1_DATA_WIDTH	CONFIG_ARMSTONEA9_LVDS0_DATA_WIDTH
 #define CONFIG_ARMSTONEA9_LVDS1_TIMING		CONFIG_ARMSTONEA9_LVDS0_TIMING
 #ifndef CONFIG_ARMSTONEA9_LVDS_DUAL_MODE
