--- a/arch/arm/boot/dts/efusa9qdl.dtsi
+++ b/arch/arm/boot/dts/efusa9qdl.dtsi
@@ -32,10 +32,12 @@
 #ifdef __MOVE_LVDS0_TO_LVDS1_DUAL_MODE__
 #undef CONFIG_EFUSA9_LVDS1_MAPPING
 #undef CONFIG_EFUSA9_LVDS1_BPP
+#undef CONFIG_EFUSA9_LVDS1_PIX_FMT
 #undef CONFIG_EFUSA9_LVDS1_DATA_WIDTH
 #undef CONFIG_EFUSA9_LVDS1_TIMING
 #define CONFIG_EFUSA9_LVDS1_MAPPING	CONFIG_EFUSA9_LVDS0_MAPPING
 #define CONFIG_EFUSA9_LVDS1_BPP		CONFIG_EFUSA9_LVDS0_BPP
+#define CONFIG_EFUSA9_LVDS1_PIX_FMT	CONFIG_EFUSA9_LVDS0_PIX_FMT
 #define CONFIG_EFUSA9_LVDS1_DATA_WIDTH	CONFIG_EFUSA9_LVDS0_DATA_WIDTH
 #define CONFIG_EFUSA9_LVDS1_TIMING	CONFIG_EFUSA9_LVDS0_TIMING
 #ifndef CONFIG_EFUSA9_LVDS_DUAL_MODE
