--- a/arch/arm/boot/dts/picomoda9qdl.dtsi
+++ b/arch/arm/boot/dts/picomoda9qdl.dtsi
@@ -34,10 +34,12 @@
 #ifdef __MOVE_LVDS0_TO_LVDS1_DUAL_MODE__
 #undef CONFIG_PICOMODA9_LVDS1_MAPPING
 #undef CONFIG_PICOMODA9_LVDS1_BPP
+#undef CONFIG_PICOMODA9_LVDS1_PIX_FMT
 #undef CONFIG_PICOMODA9_LVDS1_DATA_WIDTH
 #undef CONFIG_PICOMODA9_LVDS1_TIMING
 #define CONFIG_PICOMODA9_LVDS1_MAPPING	CONFIG_PICOMODA9_LVDS0_MAPPING
 #define CONFIG_PICOMODA9_LVDS1_BPP		CONFIG_PICOMODA9_LVDS0_BPP
+#define CONFIG_PICOMODA9_LVDS1_PIX_FMT		CONFIG_PICOMODA9_LVDS0_PIX_FMT
 #define CONFIG_PICOMODA9_LVDS1_DATA_WIDTH	CONFIG_PICOMODA9_LVDS0_DATA_WIDTH
 #define CONFIG_PICOMODA9_LVDS1_TIMING	CONFIG_PICOMODA9_LVDS0_TIMING
 #ifndef CONFIG_PICOMODA9_LVDS_DUAL_MODE
